--- a/WebsocketService/CMakeLists.txt
+++ b/WebsocketService/CMakeLists.txt
@@ -23,4 +23,4 @@ else()
     add_library(${PROJECT_NAME} SHARED ${_HDRFILES} ${_SRCFILES})
 endif()
 
-target_link_libraries(${PROJECT_NAME} ${LIBWEBSOCKETS_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${LIBWEBSOCKETS_LIBRARIES_STATIC})
