--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_subdirectory(external/libwebsockets EXCLUDE_FROM_ALL)
 add_subdirectory(include)
 add_subdirectory(CppRestService)
 add_subdirectory(WebsocketService)
+add_subdirectory(MqMessageService)
 add_subdirectory(tests/TestWebsocketService)
 add_subdirectory(tests/TestCppRestService)
 add_subdirectory(startup)
