--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = external/libwebsockets
 	url = https://github.com/warmcat/libwebsockets.git
 	branch = v2.4-stable
+[submodule "external/websocketpp"]
+	path = external/websocketpp
+	url = https://github.com/zaphoyd/websocketpp.git
