--- a/startup/configurationLin/config.json
+++ b/startup/configurationLin/config.json
@@ -25,13 +25,34 @@
       "name": "shape::LauncherService",
       "libraryPath": "",
       "libraryName": "",
-      "enabled": false,
+      "enabled": true,
       "startlevel": -2
+    },
+    {
+      "name": "shape::GTestRunner",
+      "libraryPath": "",
+      "libraryName": "GTestRunner",
+      "enabled": true,
+      "startlevel": 99
     },
     {
       "name": "shape::WebsocketService",
       "libraryPath": ".",
       "libraryName": "WebsocketService",
+      "enabled": false,
+      "startlevel": 1
+    },
+    {
+      "name": "shape::WebsocketCppService",
+      "libraryPath": ".",
+      "libraryName": "WebsocketCppService",
+      "enabled": true,
+      "startlevel": 1
+    },
+    {
+      "name": "shape::WebsocketCppClientService",
+      "libraryPath": ".",
+      "libraryName": "WebsocketCppClientService",
       "enabled": true,
       "startlevel": 1
     },
@@ -39,7 +60,7 @@
       "name": "shape::CppRestService",
       "libraryPath": ".",
       "libraryName": "CppRestService",
-      "enabled": true,
+      "enabled": false,
       "startlevel": 0
     },
     {
@@ -53,7 +74,7 @@
       "name": "shape::TestCppRestService",
       "libraryPath": ".",
       "libraryName": "TestCppRestService",
-      "enabled": true,
+      "enabled": false,
       "startlevel": 2
     }
   ]
