--- a/shapewareConfig.cmake.in
+++ b/shapewareConfig.cmake.in
@@ -28,9 +28,14 @@ set(@PROJECT_NAME@_CMAKE_RUNTIME_OUTPUT_DIRECTORY "@CMAKE_RUNTIME_OUTPUT_DIRECTO
 #---------------------------------------------------------------------------------------------------
 # Manually specified exported variables.
 
+if(BUILD_TESTING)
+  set(_TEST_INCLUDE "${@PROJECT_NAME@_CMAKE_SOURCE_DIR}/tests/include")
+endif()
+
 # Include directories (directories with include header files).
 set(@PROJECT_NAME@_INCLUDE_DIRS
-    "${@PROJECT_NAME@_CMAKE_SOURCE_DIR}/include")
+    "${@PROJECT_NAME@_CMAKE_SOURCE_DIR}/include"
+	${_TEST_INCLUDE})
 
 set(@PROJECT_NAME@_LIBRARIES)
 
