--- a/CppRestService/CMakeLists.txt
+++ b/CppRestService/CMakeLists.txt
@@ -34,8 +34,7 @@ include_directories (${LIBWEBSOCKETS_INCLUDE_DIRS})
 if(SHAPE_STATIC_LIBS)
     add_library(${PROJECT_NAME} STATIC ${_HDRFILES} ${_SRCFILES})
 else()
-    #add_library(${PROJECT_NAME} SHARED ${_HDRFILES} ${_SRCFILES})
-	add_executable(${PROJECT_NAME} ${_HDRFILES} ${_SRCFILES})
+    add_library(${PROJECT_NAME} SHARED ${_HDRFILES} ${_SRCFILES})
 endif()
 
 if(WIN32)
