--- a/CurlRestApiService/CMakeLists.txt
+++ b/CurlRestApiService/CMakeLists.txt
@@ -47,5 +47,5 @@ if(WIN32)
     #target_link_libraries(${PROJECT_NAME} PRIVATE cpprestsdk::cpprest)
     target_link_libraries(${PROJECT_NAME} PRIVATE ${CURL_LIBRARIES})
 else()
-    target_link_libraries(${PROJECT_NAME} boost_system crypto ssl cpprest)
+    target_link_libraries(${PROJECT_NAME} PRIVATE ${CURL_LIBRARIES})
 endif()
