--- a/tests/TestWebsocketService/CMakeLists.txt
+++ b/tests/TestWebsocketService/CMakeLists.txt
@@ -34,6 +34,8 @@ else()
     add_library(${PROJECT_NAME} SHARED ${_HDRFILES} ${_SRCFILES} ${_SRCCONFIG})
 endif()
 
+set_target_properties (${PROJECT_NAME} PROPERTIES FOLDER ${TESTS_FOLDER})
+
 target_link_libraries(${PROJECT_NAME} GTestStaticRunner ${GoogleTest_LIBRARIES})
 
 # do the copying
