--- a/CurlRestApiService/CMakeLists.txt
+++ b/CurlRestApiService/CMakeLists.txt
@@ -30,3 +30,5 @@ if(WIN32)
 else()
     target_link_libraries(${PROJECT_NAME} PRIVATE ${CURL_LIBRARIES})
 endif()
+
+DeployShapeComponent(${PROJECT_SUBDIR} ${PROJECT_NAME} ${COMPONENT})
