--- a/MqMessageService/CMakeLists.txt
+++ b/MqMessageService/CMakeLists.txt
@@ -27,4 +27,11 @@ if(NOT WIN32)
   )
 endif()
 
-DeployShapeComponent(${PROJECT_SUBDIR} ${PROJECT_NAME} ${COMPONENT})
+#DeployShapeComponent(${PROJECT_SUBDIR} ${PROJECT_NAME} ${COMPONENT})
+
+INSTALL(TARGETS ${PROJECT_NAME}
+    RUNTIME DESTINATION bin
+    LIBRARY DESTINATION bin
+	ARCHIVE DESTINATION lib
+)
+
