--- a/tests/TestSimulationIRestApiService/CMakeLists.txt
+++ b/tests/TestSimulationIRestApiService/CMakeLists.txt
@@ -23,3 +23,9 @@ else()
 endif()
 
 set_target_properties (${PROJECT_NAME} PROPERTIES FOLDER ${TESTS_FOLDER})
+
+INSTALL(TARGETS ${PROJECT_NAME}
+    RUNTIME DESTINATION bin
+    LIBRARY DESTINATION bin
+	ARCHIVE DESTINATION lib
+)
