--- a/CurlRestApiService/CMakeLists.txt
+++ b/CurlRestApiService/CMakeLists.txt
@@ -31,4 +31,11 @@ else()
     target_link_libraries(${PROJECT_NAME} PRIVATE ${CURL_LIBRARIES})
 endif()
 
-DeployShapeComponent(${PROJECT_SUBDIR} ${PROJECT_NAME} ${COMPONENT})
+#DeployShapeComponent(${PROJECT_SUBDIR} ${PROJECT_NAME} ${COMPONENT})
+
+INSTALL(TARGETS ${PROJECT_NAME}
+    RUNTIME DESTINATION bin
+    LIBRARY DESTINATION bin
+	ARCHIVE DESTINATION lib
+)
+
