--- a/WebsocketCppClientService/CMakeLists.txt
+++ b/WebsocketCppClientService/CMakeLists.txt
@@ -26,11 +26,4 @@ endif()
 
 target_link_libraries(${PROJECT_NAME} ${LIBWEBSOCKETS_LIBRARIES_STATIC})
 
-#DeployShapeComponent(${PROJECT_SUBDIR} ${PROJECT_NAME} ${COMPONENT})
-
-INSTALL(TARGETS ${PROJECT_NAME}
-    RUNTIME DESTINATION bin
-    LIBRARY DESTINATION bin
-	ARCHIVE DESTINATION lib
-)
-
+DeployShapeComponent(${PROJECT_NAME})
