--- a/CurlRestApiService/CMakeLists.txt
+++ b/CurlRestApiService/CMakeLists.txt
@@ -31,11 +31,4 @@ else()
     target_link_libraries(${PROJECT_NAME} PRIVATE ${CURL_LIBRARIES})
 endif()
 
-#DeployShapeComponent(${PROJECT_SUBDIR} ${PROJECT_NAME} ${COMPONENT})
-
-INSTALL(TARGETS ${PROJECT_NAME}
-    RUNTIME DESTINATION bin
-    LIBRARY DESTINATION bin
-	ARCHIVE DESTINATION lib
-)
-
+DeployShapeComponent(${PROJECT_NAME})
