--- a/MqMessageService/CMakeLists.txt
+++ b/MqMessageService/CMakeLists.txt
@@ -27,11 +27,4 @@ if(NOT WIN32)
   )
 endif()
 
-#DeployShapeComponent(${PROJECT_SUBDIR} ${PROJECT_NAME} ${COMPONENT})
-
-INSTALL(TARGETS ${PROJECT_NAME}
-    RUNTIME DESTINATION bin
-    LIBRARY DESTINATION bin
-	ARCHIVE DESTINATION lib
-)
-
+DeployShapeComponent(${PROJECT_NAME})
