--- a/tests/TestSimulationIRestApiService/CMakeLists.txt
+++ b/tests/TestSimulationIRestApiService/CMakeLists.txt
@@ -24,8 +24,4 @@ endif()
 
 set_target_properties (${PROJECT_NAME} PROPERTIES FOLDER ${TESTS_FOLDER})
 
-INSTALL(TARGETS ${PROJECT_NAME}
-    RUNTIME DESTINATION bin
-    LIBRARY DESTINATION bin
-	ARCHIVE DESTINATION lib
-)
+DeployShapeComponent(${PROJECT_NAME})
