--- a/tests/TestWebsocketService/CMakeLists.txt
+++ b/tests/TestWebsocketService/CMakeLists.txt
@@ -10,15 +10,9 @@ AddShapeRequiredInterface(${COMPONENT} shape::ILaunchService MANDATORY SINGLE)
 AddShapeRequiredInterface(${COMPONENT} shape::ITraceService MANDATORY MULTIPLE)
 ConfigureShapeComponent(${COMPONENT} COMPONENT_HXX)
 
-if(WIN32)
-  set(_CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/configurationWin)
-else()
-  set(_CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/configurationLin)
-endif()
-
 file(GLOB_RECURSE _HDRFILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h  ${COMPONENT_HXX})
 file(GLOB_RECURSE _SRCFILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
-file(GLOB_RECURSE _SRCCONFIG ${_CONFIG}/* ${CMAKE_CURRENT_SOURCE_DIR}/configuration/*)
+file(GLOB_RECURSE _SRCCONFIG ${CMAKE_CURRENT_SOURCE_DIR}/configuration/*)
 
 source_group("Header Files" FILES ${_HDRFILES})
 source_group("Source Files" FILES ${_SRCFILES})
@@ -38,30 +32,10 @@ set_target_properties (${PROJECT_NAME} PROPERTIES FOLDER ${TESTS_FOLDER})
 
 target_link_libraries(${PROJECT_NAME} GTestStaticRunner ${GoogleTest_LIBRARIES})
 
-# do the copying
-add_custom_command(
-    TARGET ${PROJECT_NAME}
-    POST_BUILD
-    COMMAND ${CMAKE_COMMAND}
-    ARGS -E copy_directory ${_CONFIG} "${CMAKE_CURRENT_BINARY_DIR}/configuration"
+DeployShapeComponent(${PROJECT_NAME})
+
+DeployShapeConfiguration(${PROJECT_NAME}
+	${CMAKE_CURRENT_SOURCE_DIR}/configuration configuration
 )
 
-# do the copying
-add_custom_command(
-    TARGET ${PROJECT_NAME}
-    POST_BUILD
-    COMMAND ${CMAKE_COMMAND}
-    ARGS -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/configuration "${CMAKE_CURRENT_BINARY_DIR}/configuration"
-)
-
-install(TARGETS ${PROJECT_NAME}
-    RUNTIME DESTINATION bin
-    LIBRARY DESTINATION bin
-	ARCHIVE DESTINATION lib
-)
-
-install(
-    DIRECTORY
-    ${CMAKE_CURRENT_SOURCE_DIR}/configuration
-    DESTINATION configurations/tests/${PROJECT_NAME}
-)
+ConfigureMsvcProject("${PROJECT_INSTALL_PREFIX}/bin/startup" ${PROJECT_NAME})
