--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,5 +5,5 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 add_subdirectory(TestWebsocketService)
 add_subdirectory(TestCurlRestApiService)
-add_subdirectory(TestCppRestService)
+#add_subdirectory(TestCppRestService)
 add_subdirectory(TestSimulationIRestApiService)
