--- a/BufferService/CMakeLists.txt
+++ b/BufferService/CMakeLists.txt
@@ -3,6 +3,7 @@ project(BufferService)
 set(COMPONENT shape::BufferService)
 DeclareShapeComponent(${COMPONENT})
 AddShapeProvidedInterface(${COMPONENT} shape::IBufferService)
+AddShapeRequiredInterface(${COMPONENT} shape::ILaunchService MANDATORY SINGLE)
 AddShapeRequiredInterface(${COMPONENT} shape::ITraceService MANDATORY MULTIPLE)
 ConfigureShapeComponent(${COMPONENT} COMPONENT_HXX)
 
