Add MqttService + tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(TestCurlRestApiService)
 add_subdirectory(TestBufferService)
 #add_subdirectory(TestCppRestService)
 add_subdirectory(TestSimulationIRestApiService)
+add_subdirectory(TestMqttService)
