--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ add_subdirectory(CurlRestApiService)
 add_subdirectory(WebsocketCppService)
 add_subdirectory(WebsocketCppClientService)
 add_subdirectory(MqMessageService)
+add_subdirectory(MqttService)
 add_subdirectory(CommandService)
 add_subdirectory(CommandLineService)
 add_subdirectory(startup)
