--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_subdirectory(TestWebsocketService)
 add_subdirectory(TestCurlRestApiService)
 add_subdirectory(TestMqttService)
-add_subdirectory(TestBufferService)
+#add_subdirectory(TestBufferService)
 #add_subdirectory(TestCppRestService)
 add_subdirectory(TestSimulationIRestApiService)
