--- a/MqttService/CMakeLists.txt
+++ b/MqttService/CMakeLists.txt
@@ -3,12 +3,15 @@ project(MqttService)
 if (WIN32) 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 FIND_PACKAGE(paho-mqtt REQUIRED)
+set(paho_INCLUDE_DIRS ${paho-mqtt_INCLUDE_DIRS})
+set(paho_FOUND ${paho-mqtt_FOUND})
 else()
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules")
 FIND_PACKAGE(paho REQUIRED)
-message(STATUS "Found paho: ${paho_FOUND}")
-message(STATUS "PAHO_INCLUDE_DIRS: ${PAHO_INCLUDE_DIRS}")
 endif()
+
+message(STATUS "Found paho: ${paho_FOUND}")
+message(STATUS "paho_INCLUDE_DIRS: ${paho_INCLUDE_DIRS}")
 
 set(COMPONENT shape::MqttService)
 DeclareShapeComponent(${COMPONENT})
@@ -26,7 +29,7 @@ source_group("Source Files" FILES ${_SRCFILES})
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
-include_directories(${PAHO_INCLUDE_DIRS})
+include_directories(${paho_INCLUDE_DIRS})
 
 if (WIN32) 
 	link_directories(${PAHO_LIBRARY_DIRS})
