CMake: add support for ccache
Signed-off-by: Roman Ondráček <ondracek.roman@centrum.cz>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,14 @@ if(CMAKE_SYSTEM_NAME MATCHES "Linux")
   endif()
 endif()
 
+if(${USE_CCACHE})
+	find_program(CCACHE_PROGRAM ccache)
+	if(CCACHE_PROGRAM)
+		set(CMAKE_C_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
+		set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
+	endif()
+endif()
+
 FIND_PACKAGE(shape REQUIRED)
 
 set(PROJECT_INSTALL_PREFIX ${PROJECT_NAME})
